# cmake-gtest-gbench-starter

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
bench/: CMakeLists.txt  primes_bench.cc
include/nemo/: count_primes.hh  foo.hh
src/: CMakeLists.txt  answer.cc  bar.cc  count_primes.cc  foo.cc  main.cc
test/: CMakeLists.txt  answer_test.cc  bar_test.cc  foo_test.cc  primes_test.cc
